--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Você seria traído e nem saberia?</title>
+  <title>Página White</title>
 
+  <!-- CLOACKER PARADISE -->
   <script>
     const urlParams = new URLSearchParams(window.location.search);
     const token = urlParams.get("token");
@@ -16,52 +16,8 @@
       document.head.appendChild(s);
     }
   </script>
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f8f8f8;
-      color: #333;
-      margin: 0;
-      padding: 2rem;
-    }
-    .container {
-      max-width: 700px;
-      margin: 0 auto;
-      background: #fff;
-      padding: 30px;
-      border-radius: 8px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
-    }
-    h1 {
-      font-size: 24px;
-      margin-bottom: 16px;
-    }
-    p {
-      margin-bottom: 12px;
-      line-height: 1.6;
-    }
-    .cta-button {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 12px 20px;
-      background-color: #0056b3;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 6px;
-    }
-    .cta-button:hover {
-      background-color: #003f8a;
-    }
-  </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Você seria traído e nem saberia?</h1>
-    <p>Segundo um estudo, 63% das pessoas que traem dizem que o parceiro nunca descobriu. E muitas vezes os sinais são sutis.</p>
-    <p>Mas existe uma forma de saber se seu relacionamento está em risco.</p>
-    <p>Faça uma avaliação gratuita desenvolvida por psicólogos.</p>
-    <a class="cta-button" href="https://go.paradisepagbr.com/8dgsfcgacx" target="_blank">Fazer Avaliação</a>
-  </div>
+  <h1>Conteúdo white aqui</h1>
 </body>
 </html>
